syntax = "proto3";

package greeter.v1;

import "config/v1/cors.proto";
import "google/api/annotations.proto";

option go_package = "github.com/origadmin/contrib/examples/helloword/services/greeter/v1;greeter";

// The greeting service definition.
service GreeterService {
  // Sends a greeting
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse)  {
    option (google.api.http) = {
      get: "/helloworld/{name}",
      additional_bindings {
        post: "/say_hello",
        body: "*",
      }
    };
  }
}

// The request message containing the user's name.
message SayHelloRequest {
  string name = 1;
}

// The response message containing the greetings
message SayHelloResponse {
  string message = 1;
}

message ExampleCors {
  config.v1.Cors cors = 1;
}